(library
 (name EVM)
 (modules EVM)
 (wrapped false)
 (preprocess (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (preprocessor_deps
  abi.ml
  abi.mli
  construct.ml
  construct.mli
  debug.ml
  debug.mli
  decode.ml
  decode.mli
  encode.ml
  encode.mli
  metrics.ml
  metrics.mli
  opcodes.ml
  print.ml
  print.mli
  utility.ml
  utility.mli)
 (libraries cryptokit num))
